updated stream-practice with implementation of advices